[gd_scene load_steps=4 format=3 uid="uid://dixa0wq7svpd5"]

[ext_resource type="Texture2D" uid="uid://d2wrovtp5dj35" path="res://resources/og-llama-18-2.png" id="1"]
[ext_resource type="Script" path="res://src/Player.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://cdva7nio0tuue" path="res://resources/llama-jump.mp3" id="3"]

[node name="Player" type="CharacterBody2D"]
texture_filter = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("2")

[node name="Shape3D" type="CollisionPolygon2D" parent="."]
light_mask = 2
position = Vector2(0, -9.5)
polygon = PackedVector2Array(-8, 1.5, -6, -0.5, 1, -0.5, 1, -7.5, 2, -9.5, 4, -9.5, 6, -8.5, 8, -6.5, 8, -4.5, 6, -2.5, 6, 4.5, 5, 5.5, 4, 8.5, 3, 9.5, 2, 8.5, 1, 5.5, -3, 5.5, -4, 8.5, -5, 9.5, -6, 8.5, -7, 5.5, -8, 3.5)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -9.5)
texture = ExtResource("1")

[node name="Area3D" type="Area2D" parent="."]

[node name="Shape3D" type="CollisionPolygon2D" parent="Area3D"]
light_mask = 2
position = Vector2(0, -9.5)
polygon = PackedVector2Array(-8, 1.5, -6, -0.5, 1, -0.5, 1, -7.5, 2, -9.5, 4, -9.5, 6, -8.5, 8, -6.5, 8, -4.5, 6, -2.5, 6, 4.5, 5, 5.5, 4, 8.5, 3, 9.5, 2, 8.5, 1, 5.5, -3, 5.5, -4, 8.5, -5, 9.5, -6, 8.5, -7, 5.5, -8, 3.5)

[node name="JumpAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")

[connection signal="body_entered" from="Area3D" to="." method="_on_Area_body_entered"]
